--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    
 }
 
 header{
     z-index: 999;
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -18,7 +19,7 @@ header{
     align-items: center;
     padding: 15px 200px;
     transition: 0.5s ease;
-    background: #2696e9;
+    
 }
 
 header .brand{
@@ -73,11 +74,29 @@ section{
     background: #2696e9;
 }
 
+
+.home:before{
+    z-index: 777;
+    content: '';
+    position: absolute;
+    background: rgba(3,96,251,0.3);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+}
+
 .home .content{
     z-index: 888;
     color: #fff;
     width: 70%;
     margin-top: 50px;
+    display: none;
+}
+
+.home .content.active{
+    display: block;
 }
 
 .home .content h1{
@@ -131,16 +150,60 @@ section{
     transform: scale(1.3);
 }
 
-.home video{
-    z-index: 000;
+.home video {
+    z-index: 000; 
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-
 }
+
+.slide-navigation{
+    z-index: 888;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(80px);
+    margin-bottom: 12px;
+}
+
+.slide-navigation .nav-btn{
+    width: 12px;
+    height: 12px;
+    background: #fff;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    transition: 0.3s ease;  
+}
+
+.slide-navigation .nav-btn:not(:last-child){
+    margin-right: 20px;
+}
+
+.slide-navigation .nav-btn:hover{
+    transform: scale(1.2);
+}
+
+.slide-navigation .nav-btn.active{
+    background:#2696e9;
+}
+
+.video-slide{
+   position: absolute;
+   width: 100%;
+   clip-path: circle(0% at 0 50%);
+}
+
+.video-slide.active{
+    clip-path: circle(150% at 0 50%);
+    transition: 2s ease;
+    transition-property: clip-path;
+}
+
 
 @media (max-width: 1040px){
     header{
